--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-HELLO MADAFAKA
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rompope</title>
+
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+<section id="blog">
+
+    <div class="blog-titulo">
+        <span>Articulos</span>
+        <h3>Entradas Recientes</h3>
+    </div>
+
+</section>
+
+</body>
+</html>
